syntax = "proto3";

package user.v2;
option go_package = "github.com/iakrevetkho/archaeopteryx_example;user";

import "google/api/annotations.proto";

service UserService {
  rpc AddUser (AddUserRequest) returns (AddUserResponse) {
    option (google.api.http) = {
      post: "/api/v2/user"
      body: "*"
    };
  }
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v2/user"
    };
  }
}

message AddUserRequest {
  string first_name = 1;
  string last_name = 2;
  string password = 3;
}

message AddUserResponse {
  uint32 id = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  string first_name = 1;
  string last_name = 2;
  string password = 3;
}
